# fastexp

./: CMakeLists.txt  README.md  benchmark.cpp  benchmark_template.cpp  fastexp.cpp  fastexp.h  product.h  schraudolph.h
python/: benchmark.py
